# CMakeTemplate

./: CMakeLists.txt  README.md
include/: calculations.h
src/: calculations.cpp  main.cpp
test/: CMakeLists.txt  calculationsTest.cpp  sampleTest.cpp
